--- a/InventoryUserAPI.Infrastructure/InventoryUserAPI.Infrastructure.csproj
+++ b/InventoryUserAPI.Infrastructure/InventoryUserAPI.Infrastructure.csproj
@@ -1,11 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\InventoryUserAPI.Application\InventoryUserAPI.Application.csproj" />
     <ProjectReference Include="..\InventoryUserAPI.Domain\InventoryUserAPI.Domain.csproj" />
+	 <ProjectReference Include="..\InventoryUserAPI.Application\InventoryUserAPI.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.6">
@@ -18,6 +21,10 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Data\AppIdentityDbContextFactory.cs" />
   </ItemGroup>
 
   <PropertyGroup>
